--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                 <h2>Submitting Papers 2025 - Details come after published online<h2>
                 <p> 
-                  IEEE RA-L: SLAM Optimization
+                  II-NVM: Accepted by IEEE Robotics and Automation Letters, will online soon.
                 </p>
                 <p> 
                   ACM SIGIR Conference: Visual language based human information retrieval
