--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                   II-NVM: Accepted by IEEE Robotics and Automation Letters, will online soon.
                 </p>
                 <p> 
-                  ACM SIGIR Conference: Visual language based human information retrieval
+                  ACM MM Conference: Visual language based human information retrieval
                 </p>
                 <p> 
                   IEEE Transactions on Industrial Informatics: Attention mechanism for human information retrieval
