updated waymo project

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                 </p>
 
                 <h2>Papers<h2>
-                <a href="https://arxiv.org/pdf/2504.08204">
-                  II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping - published
-                </a>
+                <p><a href="https://arxiv.org/pdf/2504.08204">
+                  (1) <b> R-AL </b> - II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping - Published on 04/2025 <b>Oral Presentation</b>, <b>Invited to IROS</b>
+                </a></p>
+                <p><a href="https://drive.google.com/file/d/1i_TJRmuoQ28AukyJ73OIDQTz0HmSCHuV/view?usp=sharing"> 
+                  (2) <b> Neurocomputing </b> - FA-ReID: Feature Alignment with Adversarial Learning for Clothing-Changing Person Re-Identification - Accepted on 11/2025
+                </a></p>
                 <p> 
-                  ACM MM Conference: Visual language based human information retrieval - Submitting Paper 2025 - Details come after published online
-                </p>
-                <p> 
-                  IEEE Transactions on Industrial Informatics: Attention mechanism for human information retrieval - Submitting Paper 2025 - Details come after published online
+                  CVPR: Multimodal Related Feature Extraction - Submitting 2026, Details come after published online
                 </p>
               </td>
             </tr>
@@ -95,6 +95,42 @@
           </tbody></table>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+             <tr onmouseout="waymo_stop()" onmouseover="waymo_start()">
+              <td style="padding:16px;width:20%;vertical-align:middle">
+                <div class="one">
+                  <div class="two" id='waymo_image'><video  width=100% muted autoplay loop>
+                  <source src="images/waymo_after.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video></div>
+                  <img src='images/waymo.jpg' width=100%>
+                </div>
+                <script type="text/javascript">
+                  function waymo_start() {
+                    document.getElementById('waymo_image').style.opacity = "1";
+                  }
+        
+                  function waymo_stop() {
+                    document.getElementById('waymo_image').style.opacity = "0";
+                  }
+                  waymo_stop()
+                </script>
+              </td>
+              <td style="padding:8px;width:80%;vertical-align:middle">
+                <a>
+                  <span class="papertitle">High-Fidelity Traffic Simulation with Camera Embeddings, Stanford University, Python, Pybullet, Reinforcement Learning</span>
+                </a>
+                <br>
+                <a href="https://waymo.com/open/challenges/2025/sim-agents/">Waymo Open Dataset Challenge 2025- Sim Agents</a>,
+                <a href="https://drive.google.com/file/d/1D8E5j7hd0VpmUY6m66pM1xZUzJA9Hk9-/view?usp=sharing"><b>Final Report</b></a>,
+                <a href="https://drive.google.com/file/d/1OpHLxGrZEJn59HQD0FiUKgd7OF5zzrP3/view?usp=sharing"><b>Poster</b></a>
+                <em>Apr 2025 - Jun 2025</em>
+                <br>
+                <p>
+                  • Propose to enhance the capabilities of a pretrained SMART-7M model by inte-grating camera embeddings from the Waymo Open Motion Dataset 1.2.1. <br>
+                  • employ a cross-attention mechanism to effectively fuse the rich visual information with the existing agent and map representations within the transformer decoder, demonstrating superior performance. <br>
+                </p>
+              </td>
+            </tr>
             <tr onmouseout="picknplace_stop()" onmouseover="picknplace_start()">
               <td style="padding:16px;width:20%;vertical-align:middle">
                 <div class="one">
