add google scholar

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:yj2713@columbia.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="https://drive.google.com/file/d/1AYd2RA9X3K4WMhxKC4vu2EgOIWT6IU6M/view?usp=sharing">CV</a> &nbsp;/&nbsp;
+                  <a href="https://drive.google.com/file/d/1wbCyGKteTzjiOKQbhibb5lZcvqH1YFJK/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/jayi-jane-90bb881b5/">Linkedin</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/Jaye-yi">Github</a>
+                  <a href="https://github.com/Jaye-yi">Github</a>&nbsp;/&nbsp;
+                  <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&authuser=2&user=Bzn98mcAAAAJ">Google Scholar</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
