add google scholar - 12/02/2025

--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
                 <p><a href="https://arxiv.org/pdf/2504.08204">
                   (1) <b> R-AL </b> - II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping - Published on 04/2025 <b>Oral Presentation</b>, <b>Invited to IROS</b>
                 </a></p>
-                <p><a href="https://drive.google.com/file/d/1i_TJRmuoQ28AukyJ73OIDQTz0HmSCHuV/view?usp=sharing"> 
-                  (2) <b> Neurocomputing </b> - FA-ReID: Feature Alignment with Adversarial Learning for Clothing-Changing Person Re-Identification - Accepted on 11/2025
+                <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231225029091"> 
+                  (2) <b> Neurocomputing </b> - FA-ReID: Feature Alignment with Adversarial Learning for Clothing-Changing Person Re-Identification - Published on 11/2025
                 </a></p>
                 <p> 
-                  CVPR: Multimodal Related Feature Extraction - Submitting 2026, Details come after published online
+                  CVPR: A Benchmark Dataset Related to Multimodal (Not the exact name as under review. To be issued in 2026)
+                </p>
+                <p> 
+                  TCSVT: CLIP and Cross-Attention Assisted Person Re-identification (Not the exact name as under review. To be issued in 2026)
                 </p>
               </td>
             </tr>
