edited linkedin and resume

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:yj2713@columbia.edu">Email</a> &nbsp;/&nbsp;
-                  <a href="https://drive.google.com/file/d/1wbCyGKteTzjiOKQbhibb5lZcvqH1YFJK/view?usp=sharing">CV</a> &nbsp;/&nbsp;
-                  <a href="https://www.linkedin.com/in/jayi-jane-90bb881b5/">Linkedin</a> &nbsp;/&nbsp;
+                  <a href="https://drive.google.com/file/d/1pKf4Hw2Tl7WQaAozTM78pgZYKjGznhfS/view?usp=sharing">CV</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/yina-jian-90bb881b5/?trk=opento_sprofile_pfeditor">Linkedin</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Jaye-yi">Github</a>&nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&authuser=2&user=Bzn98mcAAAAJ">Google Scholar</a>
                 </p>
