--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p>I am actively seeking research project opportunities and internships in Embodied AI, Robotics, and LLM. Please feel free to email me for possible collaborations.
                 </p>
                 <p style="text-align:center">
-                  <a href="mailto:yj2713@columbia.edu">Email</a> &nbsp;/&nbsp;
+                  <a href="/cdn-cgi/l/email-protection#91e8fba3a6a0a2d1f2fefde4fcf3f8f0bff4f5e4">Email</a> &nbsp;/&nbsp;
                   <a href="https://drive.google.com/file/d/1pKf4Hw2Tl7WQaAozTM78pgZYKjGznhfS/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/yina-jian-90bb881b5/?trk=opento_sprofile_pfeditor">Linkedin</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Jaye-yi">Github</a>&nbsp;/&nbsp;
@@ -39,6 +39,31 @@
               </td>
             </tr>
           </tbody></table>
+
+          <!-- Elucigate Startup Section -->
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:16px;width:100%;vertical-align:middle">
+                <div style="background: linear-gradient(135deg, #FEF9E7 0%, #E8F8F5 100%); border-radius: 16px; padding: 24px; margin-bottom: 16px; border: 1px solid #F7DC6F;">
+                  <div style="display: flex; align-items: center; margin-bottom: 12px;">
+                    <img src="images/elucigate_icon_512.png" style="width: 36px; height: 36px; margin-right: 12px; border-radius: 8px;">
+                    <h2 style="margin: 0; color: #2C3E50;">Founder & CEO — Elucigate</h2>
+                  </div>
+                  <p style="margin: 0 0 12px 0; color: #2C3E50; font-size: 15px;">
+                    <b>Turn complexity into clarity.</b> I'm building an AI startup that makes technology feel light, smooth, and refreshing — like a glass of lemonade on a hot day.
+                  </p>
+                  <p style="margin: 0 0 12px 0; color: #566573; font-size: 14px;">
+                    When life gives you lemons, make lemonade. Elucigate transforms complex problems into clear, simple solutions through AI — following the playbook of brand-first, user-loved products.
+                  </p>
+                  <p style="margin: 0;">
+                    <a href="https://elucigate.com" style="color: #2874A6; font-weight: bold;">elucigate.com</a>
+                    <!-- <span style="color: #AAB7B8; margin-left: 8px; font-size: 13px;">(Coming Soon)</span> -->
+                  </p>
+                </div>
+              </td>
+            </tr>
+          </tbody></table>
+
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
               <td style="padding:16px;width:100%;vertical-align:middle">
@@ -108,7 +133,7 @@
                   </video></div>
                   <img src='images/waymo.jpg' width=100%>
                 </div>
-                <script type="text/javascript">
+                <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script type="text/javascript">
                   function waymo_start() {
                     document.getElementById('waymo_image').style.opacity = "1";
                   }
@@ -4734,13 +4759,4 @@ for Topologically Varying Neural Radiance Fields</span>
               <td style="padding:0px">
                 <br>
                 <p style="text-align:center;font-size:small;">
-                  The website template is borrowed from <a href="https://github.com/jonbarron/jonbarron_website">here</a>.
-                </p>
-              </td>
-            </tr>
-          </tbody></table>
-        </td>
-      </tr>
-    </table>
-  </body>
-</html>
+                  The website template is borrowed from <a href="https://github.com/jonbarron/jonbarron_website">her
