tiny typo fixed in ELucigate card 12-24-2025

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <b>Turn complexity into clarity.</b> I'm building an AI startup that makes technology feel light, smooth, and refreshing — like a glass of lemonade on a hot day.
                   </p>
                   <p style="margin: 0 0 12px 0; color: #566573; font-size: 14px;">
-                    When life gives you lemons, make lemonade. Elucigate transforms complex problems into clear, simple solutions through AI — following the Duolingo playbook of brand-first, user-loved products.
+                    When life gives you lemons, make lemonade. Elucigate transforms complex problems into clear, simple solutions through AI — following the playbook of brand-first, user-loved products.
                   </p>
                   <p style="margin: 0;">
                     <a href="https://elucigate.com" style="color: #2874A6; font-weight: bold;">elucigate.com</a>
