added CEO after founder

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div style="background: linear-gradient(135deg, #FEF9E7 0%, #E8F8F5 100%); border-radius: 16px; padding: 24px; margin-bottom: 16px; border: 1px solid #F7DC6F;">
                   <div style="display: flex; align-items: center; margin-bottom: 12px;">
                     <img src="images/elucigate_icon_512.png" style="width: 36px; height: 36px; margin-right: 12px; border-radius: 8px;">
-                    <h2 style="margin: 0; color: #2C3E50;">Founder — Elucigate</h2>
+                    <h2 style="margin: 0; color: #2C3E50;">Founder & CEO — Elucigate</h2>
                   </div>
                   <p style="margin: 0 0 12px 0; color: #2C3E50; font-size: 15px;">
                     <b>Turn complexity into clarity.</b> I'm building an AI startup that makes technology feel light, smooth, and refreshing — like a glass of lemonade on a hot day.
