--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
                 </p>
                 <p>I am a researcher and entrepreneur focused on robot learning and embodied AI. I completed graduate coursework at Stanford University (4.12 GPA) in robot learning and computer vision, studying under Professors Chelsea Finn and Fei-Fei Li. Before Stanford, I earned my M.S. in Computer Science from Columbia University (Computer Vision and Robotics track, 2023) and worked as a Software Engineer at Oracle.
                 </p>
-                <p>I have published 4 papers including IEEE RAL (48 citations, IROS 2025 Oral) and Neurocomputing, with 2 more under review at CVPR and TCSVT. I am the founder of <a href="https://elucigate.com" style="color: #2874A6;">Elucigate</a>, an AI startup. I am currently applying to PhD programs in robotics and embodied AI. Feel free to reach out for collaborations.
-                </p>
+                <p>I have published 5 papers, with 69 citations in total, including IEEE RAL (49 citations, IROS 2025 Oral), Neurocomputing, and Publications of the Astronomical Society of the Pacific (20 citations). I have 2 more papers under review at CVPR and TCSVT. I am the founder of <a href="https://elucigate.com" style="color: #2874A6;">Elucigate</a>, an AI startup. I am currently applying to PhD programs in robotics and embodied AI. Feel free to reach out for collaborations.
                 <p style="text-align:center">
                   <a href="/cdn-cgi/l/email-protection#91e8fba3a6a0a2d1f2fefde4fcf3f8f0bff4f5e4">Email</a> &nbsp;/&nbsp;
                   <a href="https://drive.google.com/file/d/1pKf4Hw2Tl7WQaAozTM78pgZYKjGznhfS/view?usp=sharing">CV</a> &nbsp;/&nbsp;
