--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </p>
                 <p>I am a researcher and entrepreneur focused on robot learning and embodied AI. I completed graduate coursework at Stanford University (4.12 GPA) in robot learning and computer vision, studying under Professors Chelsea Finn and Fei-Fei Li. Before Stanford, I earned my M.S. in Computer Science from Columbia University (Computer Vision and Robotics track, 2023) and worked as a Software Engineer at Oracle.
                 </p>
-                <p>I have published 5 papers, with 69 citations in total, including IEEE RAL (49 citations, IROS 2025 Oral), Neurocomputing, and Publications of the Astronomical Society of the Pacific (20 citations). I have 2 more papers under review at CVPR and TCSVT. I am the founder of <a href="https://elucigate.com" style="color: #2874A6;">Elucigate</a>, an AI startup. I am currently applying to PhD programs in robotics and embodied AI. Feel free to reach out for collaborations.
+                <p>I have published 6 papers, with 69 citations in total, including IEEE RAL (49 citations, IROS 2025 Oral), Neurocomputing, and Publications of the Astronomical Society of the Pacific (20 citations). I have 2 more papers under review at CVPR and TCSVT. I am the founder of <a href="https://elucigate.com" style="color: #2874A6;">Elucigate</a>, an AI startup. I am currently applying to PhD programs in robotics and embodied AI. Feel free to reach out for collaborations.
                 <p style="text-align:center">
                   <a href="/cdn-cgi/l/email-protection#91e8fba3a6a0a2d1f2fefde4fcf3f8f0bff4f5e4">Email</a> &nbsp;/&nbsp;
                   <a href="https://drive.google.com/file/d/1X0H6SA_6ssCWYTLE69Vc0yRMlu16nHZs/view?usp=sharing">CV</a> &nbsp;/&nbsp;
@@ -97,24 +97,36 @@
           </tbody></table>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-              <tr>
-              <td style="padding:16px;width:100%;vertical-align:middle">
-                <h2>Publications</h2>
-                <p><a href="https://arxiv.org/pdf/2504.08204">
-                  (1) <b> R-AL </b> - II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping - Published on 04/2025 <b>Oral Presentation</b>, <b>Invited to IROS</b>
-                </a></p>
-                <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231225029091"> 
-                  (2) <b> Neurocomputing </b> - FA-ReID: Feature Alignment with Adversarial Learning for Clothing-Changing Person Re-Identification - Published on 11/2025
-                </a></p>
-                <p> 
-                  CVPR: A Benchmark Dataset Related to Multimodal (Not the exact name as under review. To be issued in 2026)
-                </p>
-                <p> 
-                  TCSVT: CLIP and Cross-Attention Assisted Person Re-identification (Not the exact name as under review. To be issued in 2026)
-                </p>
-              </td>
-            </tr>
-          </tbody></table>
+          <tr>
+            <td style="padding:16px;width:100%;vertical-align:middle">
+              <h2>Publications</h2>
+              <p><a href="https://arxiv.org/pdf/2504.08204">
+                (1) <b>IEEE R-AL</b> - II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping - Published 04/2025 <b>IROS 2025 Oral, (49 citations)</b>
+              </a></p>
+              <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231225029091"> 
+                (2) <b>Neurocomputing</b> - FA-ReID: Feature Alignment with Adversarial Learning for Clothing-Changing Person Re-Identification - Published 11/2025
+              </a></p>
+              <p><a href="https://iopscience.iop.org/article/10.1088/1538-3873/acdf84/meta">
+                (3) <b>PASP</b> - Regularized Maximum Likelihood Image Synthesis and Validation for ALMA Continuum Observations of Protoplanetary Disks - Published 2023 <b>(20 citations)</b>
+              </a></p>
+              <p><a href="https://www.researchgate.net/publication/363859131_Regularized_Maximum_Likelihood_Techniques_for_ALMA_Observations">
+                (4) <b>arXiv</b> - Regularized Maximum Likelihood Techniques for ALMA Observations - Published 2022
+              </a></p>
+              <p><a href="https://www.preprints.org/manuscript/202601.0682">
+                (5) <b>Preprints</b> - PI-VLA: A Symmetry-Aware Predictive and Interactive Vision-Language-Action Framework for Robust Robotic Manipulation - Published 01/2026 <b>(100+ downloads in first week!)</b>
+              </a></p>
+              <p><a href="https://cs231n.stanford.edu/papers">
+                (6) <b>Stanford CS231N Papers</b> - High-Fidelity Traffic Simulation with Camera Embeddings - 2025 <b>(Grade: A+)</b>
+              </a></p>
+              <p> 
+                (7) <b>CVPR 2026</b> - A Benchmark Dataset Related to Multimodal (under review, <b>first author</b>)
+              </p>
+              <p> 
+                (8) <b>IEEE TCSVT</b> - CLIP and Cross-Attention Assisted Person Re-identification (under review, second author)
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
 
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
