2026-01-14 added first author to 8 papers

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 (4) <b>arXiv</b> - Regularized Maximum Likelihood Techniques for ALMA Observations - Published 2022
               </a></p>
               <p><a href="https://www.preprints.org/manuscript/202601.0682">
-                (5) <b>Preprints</b> - PI-VLA: A Symmetry-Aware Predictive and Interactive Vision-Language-Action Framework for Robust Robotic Manipulation - Published 01/2026 <b>(100+ downloads in first week!)</b>
+                (5) <b>Preprints</b> - PI-VLA: A Symmetry-Aware Predictive and Interactive Vision-Language-Action Framework for Robust Robotic Manipulation - Published 01/2026 <b>(first author, 100+ downloads in first week!)</b>
               </a></p>
               <p><a href="https://cs231n.stanford.edu/papers">
                 (6) <b>Stanford CS231N Papers</b> - High-Fidelity Traffic Simulation with Camera Embeddings - 2025 <b>(Grade: A+)</b>
