edit phd application

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </p>
                 <p>I am a researcher and entrepreneur focused on robot learning and embodied AI. I completed graduate coursework at Stanford University (3.83-4.1 GPA) in robot learning and computer vision, studying under Professors Chelsea Finn and Fei-Fei Li. Before Stanford, I earned my M.S. in Computer Science from Columbia University (Computer Vision and Robotics track, 2023) and worked as a Software Engineer at Oracle.
                 </p>
-                <p>I have published 6 papers, with 72 citations in total, including IEEE RAL (50 citations, IROS 2025 Oral), Neurocomputing, and Publications of the Astronomical Society of the Pacific (21 citations). I have 2 more papers under review at CVPR and TCSVT. I am the founder of <a href="https://elucigate.com" style="color: #2874A6;">Elucigate</a>, an AI startup. I am currently applying to PhD programs in robotics and embodied AI. Feel free to reach out for collaborations.
-                <p style="text-align:center">
+                <p>I have published 7 papers (including PI-VLA, just accepted at Symmetry (MDPI), not online yet), with 72 citations in total, including IEEE RAL (50 citations, IROS 2025 Oral), Neurocomputing, and Publications of the Astronomical Society of the Pacific (21 citations). I have 2 more papers under review at CVPR (first author) and TCSVT. I am the founder of <a href="https://elucigate.com" style="color: #2874A6;">Elucigate</a>, an AI startup. <b>I am looking for research opportunities in robotics and embodied AI. Feel free to reach out for collaborations.</b></p>
+                  <p style="text-align:center">
                   <a href="/cdn-cgi/l/email-protection#91e8fba3a6a0a2d1f2fefde4fcf3f8f0bff4f5e4">Email</a> &nbsp;/&nbsp;
                   <a href="https://drive.google.com/file/d/1X0H6SA_6ssCWYTLE69Vc0yRMlu16nHZs/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/yina-jian-90bb881b5/?trk=opento_sprofile_pfeditor">Linkedin</a> &nbsp;/&nbsp;
@@ -113,7 +113,7 @@
                 (4) <b>arXiv</b> - Regularized Maximum Likelihood Techniques for ALMA Observations - Published 2022
               </a></p>
               <p><a href="https://www.preprints.org/manuscript/202601.0682">
-                (5) <b>Preprints</b> - PI-VLA: A Symmetry-Aware Predictive and Interactive Vision-Language-Action Framework for Robust Robotic Manipulation - Published 01/2026 <b>(first author, 100+ downloads in first week!)</b>
+                (5) <b>>Symmetry (MDPI, 2026)</b>  - PI-VLA: A Symmetry-Aware Predictive and Interactive Vision-Language-Action Framework for Robust Robotic Manipulation <b>(first author, preprint: 100+ downloads in week 1!)</b>
               </a></p>
               <p><a href="https://cs231n.stanford.edu/papers">
                 (6) <b>Stanford CS231N Papers</b> - High-Fidelity Traffic Simulation with Camera Embeddings - 2025 <b>(Grade: A+)</b>
