--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
             <td style="padding:16px;width:100%;vertical-align:middle">
               <h2>Publications</h2>
               <p><a href="https://arxiv.org/pdf/2504.08204">
-                (1) <b>IEEE R-AL</b> - II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping - Published 04/2025 <b>IROS 2025 Oral, (49 citations)</b>
+                (1) <b>IEEE R-AL</b> - II-NVM: Enhancing Map Accuracy and Consistency with Normal Vector-Assisted Mapping - Published 04/2025 <b>IROS 2025 Oral, (50 citations)</b>
               </a></p>
               <p><a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231225029091"> 
-                (2) <b>Neurocomputing</b> - FA-ReID: Feature Alignment with Adversarial Learning for Clothing-Changing Person Re-Identification - Published 11/2025
+                (2) <b>Neurocomputing</b> - FA-ReID: Feature Alignment with Adversarial Learning for Clothing-Changing Person Re-Identification - Published 11/2025 <b>(1 citation)</b>
               </a></p>
               <p><a href="https://iopscience.iop.org/article/10.1088/1538-3873/acdf84/meta">
-                (3) <b>PASP</b> - Regularized Maximum Likelihood Image Synthesis and Validation for ALMA Continuum Observations of Protoplanetary Disks - Published 2023 <b>(20 citations)</b>
+                (3) <b>PASP</b> - Regularized Maximum Likelihood Image Synthesis and Validation for ALMA Continuum Observations of Protoplanetary Disks - Published 2023 <b>(21 citations)</b>
               </a></p>
               <p><a href="https://www.researchgate.net/publication/363859131_Regularized_Maximum_Likelihood_Techniques_for_ALMA_Observations">
                 (4) <b>arXiv</b> - Regularized Maximum Likelihood Techniques for ALMA Observations - Published 2022
