added trasncript note

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                   <a href="https://drive.google.com/file/d/1X0H6SA_6ssCWYTLE69Vc0yRMlu16nHZs/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                   <a href="https://www.linkedin.com/in/yina-jian-90bb881b5/?trk=opento_sprofile_pfeditor">Linkedin</a> &nbsp;/&nbsp;
                   <a href="https://github.com/Jaye-yi">Github</a>&nbsp;/&nbsp;
-                  <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&authuser=2&user=Bzn98mcAAAAJ">Google Scholar</a>
+                  <a href="https://scholar.google.com/citations?view_op=list_works&hl=en&authuser=2&user=Bzn98mcAAAAJ">Google Scholar</a>&nbsp;/&nbsp;
+                  <a href="https://drive.google.com/file/d/1uEE5z3cmQKqlt8pNh-Ed-EWSu9_vN-gg/view?usp=sharing">Transcript Notes</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
